style: Style Layout and LoginPage

--- a/packages/client/src/components/Layout.module.css
+++ b/packages/client/src/components/Layout.module.css
@@ -1,10 +1,5 @@
 .wrapper {
-    width: clamp(320px, 100%, 393px);
-    min-height: 100svh;
+    position: relative;
 
-    background-color: #f8f9fa;
-}
-
-.main {
     width: 100%;
 }
