--- a/packages/client/src/styles/global.css
+++ b/packages/client/src/styles/global.css
@@ -8,12 +8,12 @@ html {
 
 body {
     overflow-wrap: break-word;
-    overscroll-behavior-y: none;
 
     background-color: #212529;
 
     font-size: 1.6rem;
     word-break: keep-all;
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
 input {
