--- a/packages/client/src/pages/HomePage.module.css
+++ b/packages/client/src/pages/HomePage.module.css
@@ -23,7 +23,7 @@
 }
 
 .main {
-    padding: 0 2rem;
+    padding: 0 2rem 8rem;
 }
 
 .section:not(:last-child) {
@@ -48,13 +48,12 @@
 }
 
 .createRaffleButton {
-    position: absolute;
+    position: sticky;
     bottom: 2.4rem;
-    left: 2.4rem;
-    right: 2.4rem;
 
     display: block;
 
+    margin: 0 2.4rem;
     border-radius: 1.1rem;
     padding: 1.2rem 2.4rem;
 
