--- a/packages/client/src/pages/HomePage.module.css
+++ b/packages/client/src/pages/HomePage.module.css
@@ -48,17 +48,22 @@
 }
 
 .createRaffleButton {
-    position: sticky;
+    position: fixed;
     bottom: 2.4rem;
 
-    display: block;
+    transition: background-color 0.2s ease-out;
 
     margin: 0 2.4rem;
     border-radius: 1.1rem;
+    width: min(calc(100% - 4.8rem), 34.4rem);
     padding: 1.2rem 2.4rem;
 
     background-color: #646cff;
 
     text-align: center;
     color: #fff;
+
+    &:hover {
+        background-color: #4f46e5;
+    }
 }
