--- a/packages/client/src/styles/global.css
+++ b/packages/client/src/styles/global.css
@@ -13,7 +13,10 @@ body {
 
     font-size: 1.6rem;
     word-break: keep-all;
-    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+    font-family: 'Pretendard Variable', Pretendard, -apple-system,
+        BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
+        'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic',
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
 }
 
 input {
@@ -26,6 +29,9 @@ button {
     font-size: inherit;
     font-family: inherit;
     color: inherit;
+}
+button:focus {
+    outline: 0;
 }
 
 dialog {
