feat: placeholder card

--- a/packages/client/src/pages/MyPage.module.css
+++ b/packages/client/src/pages/MyPage.module.css
@@ -53,3 +53,10 @@
         background-color: #e03131;
     }
 }
+
+.emptyText {
+    padding: 2.4rem;
+    text-align: center;
+    color: #868e96;
+    font-size: 1.4rem;
+}
