--- a/packages/client/src/pages/LoginPage.module.css
+++ b/packages/client/src/pages/LoginPage.module.css
@@ -7,20 +7,21 @@
     min-height: 100svh;
 }
 
-.title {
-    margin-bottom: 2.8rem;
-
-    font-size: 2.4rem;
-    text-align: center;
-}
-
 .loginButton {
-    border-radius: 1.1rem;
+    transition: transform 0.2s ease, opacity 0.2s ease;
+
+    margin-top: 2.4rem;
+    border-radius: 1.8rem;
     width: 60%;
-    padding: 1.2rem 2.4rem;
+    padding: 1.8rem 2.4rem;
 
     background-color: #646cff;
 
     text-align: center;
     color: #fff;
+
+    &:active {
+        transform: scale(0.96);
+        opacity: 0.9;
+    }
 }
