--- a/packages/client/src/pages/MyPage.module.css
+++ b/packages/client/src/pages/MyPage.module.css
@@ -1,5 +1,10 @@
 .main {
-    padding: 2.4rem 2rem 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
+    height: 100%;
+    padding-bottom: 8rem;
 }
 
 .section:not(:last-child) {
